# agent_based_modelling

./: carrier.py  config.yaml  config_loader.py  design.md  experiment_reporter.py  freight_model.py  freighttech.py  load.py  pyproject.toml
experiments/aggressive_carriers_2025-07-13_12-04-21/: config.yaml  metadata.json  report.md  summary.json  timeseries_data.csv
experiments/tight_market_2025-07-13_12-03-29/: metadata.json
experiments/tight_market_2025-07-13_12-03-54/: config.yaml  metadata.json  report.md  summary.json  timeseries_data.csv
